Add new color to delete button

--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,15 @@ button {
     background-color: #ff4d4d;
 }
 
+.delete {
+    background-color: rgb(18, 50, 80);
+}
+
+.delete:hover {
+    transform: translateY(-2px);
+    background-color: rgb(33, 68, 100);
+}
+
 .digits {
     background-color: #2d2d2d;
 }
