--- a/styles.css
+++ b/styles.css
@@ -19,9 +19,9 @@ body {
 }
 
 .calculator {
-    width: clamp(320px, 80vw, 600px);
-    height: clamp(500px, 80vh, 800px);
-    padding: clamp(1rem, 1.5vw, 2rem);
+    width: 340px;
+    height: 600px;
+    padding: 20px;
     border-radius: 20px;
     background-color: #1e1e1e;
 }
@@ -31,9 +31,9 @@ body {
     flex-direction: column;
     align-items: flex-end;
     justify-content: flex-end;
-    gap: 0.75rem;
-    height: clamp(100px, 20vh, 150px);
-    margin-bottom: 1.25rem;
+    gap: 10px;
+    height: 140px;
+    margin-bottom: 20px;
     border-radius: 18px;
     color: white;
     background-color: #181818;
@@ -42,7 +42,7 @@ body {
 
 /* Content displayed by the screen calculator */
 span {
-    margin-right: clamp(1rem, 1.5vw, 2rem);
+    margin-right: 18px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -51,8 +51,8 @@ span {
 }
 
 .main-display {
-    margin-bottom: 0.75rem;
-    font-size: clamp(1.8rem, 4vw, 2.5rem);
+    margin-bottom: 20px;
+    font-size: 40px;
     font-weight: bold;
 }
 
