--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body {
     background-color: #121212;
 }
 
+/* ===== Calculator ===== */
 .calculator {
     width: 340px;
     height: 600px;
@@ -29,6 +30,8 @@ body {
     background-color: #1e1e1e;
 }
 
+/* -- Screen -- */
+/* Container to show results */
 .screen {
     display: flex;
     flex-direction: column;
@@ -38,34 +41,49 @@ body {
     height: 140px;
     margin-bottom: 20px;
     border-radius: 18px;
-    color: white;
     background-color: #181818;
     box-shadow: inset 0 2px 6px rgba(255, 255, 255, 0.05), inset 0 -3px 8px rgba(0, 0, 0, 0.6);
+    color: white;
 }
 
-/* Content displayed by the screen calculator */
+/* Displayed text inside the screen */
 span {
     margin-right: 18px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+/* Previous operation */
 .sub-display {
     color: grey;
 }
 
+/* Current result */
 .main-display {
     margin-bottom: 20px;
     font-size: 40px;
     font-weight: bold;
 }
 
-/* Calculator buttons */
+/* -- Buttons -- */
+/* Container to structure calculator's keys */
 .buttons {
     display: flex;
     flex-wrap: wrap;
     gap: 12px;
 }
 
+/* Standard button size (used by all except "0") */
+.general {
+    width: 66px;
+    height: 66px;
+}
+
+/* Wider button size used for "0" */
+.special {
+    width: 222px;
+}
+
+/* Base button style */
 button {
     display: flex;
     align-items: center;
@@ -74,63 +92,60 @@ button {
     border: none;
     border-radius: 12px;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.4);
-    cursor: pointer;
-    transition: transform 0.15s ease;
-    font-family: "Ultra Regular", "Inter", "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    font-family: "Ultra Regular", Inter, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     font-size: 22px;
     color: white;
+    cursor: pointer;
+    transition: transform 0.15s ease;
 }
 
-.general {
-    width: 66px;
-    height: 66px;
-}
-
+/* Variant buttons style */
+/* AC */
 .clear {
     background-color: #d83b3b;
 }
 
 .clear:hover {
-    transform: translateY(-2px);
     background-color: #ff4d4d;
+    transform: translateY(-2px);
 }
 
+/* ⌫ */
 .delete {
     background-color: rgb(18, 50, 80);
 }
 
 .delete:hover {
-    transform: translateY(-2px);
     background-color: rgb(24, 59, 92);
-}
-
-.digits {
-    background-color: #2d2d2d;
-}
-
-.digits:hover {
     transform: translateY(-2px);
-    background-color: #3c3c3c;
 }
 
+/* +, -, *, / */
 .operator {
     background-color: #0078ff;
 }
 
 .operator:hover {
-    transform: translateY(-2px);
     background-color: #339aff;
+    transform: translateY(-2px);
 }
 
+/* ., 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 */
+.digit {
+    background-color: #2d2d2d;
+}
+
+.digit:hover {
+    background-color: #3c3c3c;
+    transform: translateY(-2px);
+}
+
+/* = */
 .equal {
     background-color: #1ebc61;
 }
 
 .equal:hover {
-    transform: translateY(-2px);
     background-color: #24d46d;
-}
-
-.special {
-    width: 222px;
+    transform: translateY(-2px);
 }
